# discord-plex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml  main.yml
.serena/: project.yml
src/: __init__.py  bot.py  util.py
src/cogs/plex/: __init__.py  cache.py  cog.py  embeds.py  models.py  overseerr_client.py  plex_client.py  views.py
src/config/: auth.py
src/discord_plex/: __init__.py  bot.py  logging_setup.py  util.py
src/discord_plex/cogs/: __init__.py
src/discord_plex/cogs/plex/: __init__.py  cache.py  cog.py  embeds.py  library.py  models.py  overseerr_client.py  plex_client.py  requests.py  views.py
src/discord_plex/config/: __init__.py  auth.py
tests/: test_auth_config.py  test_cache.py  test_choice_caps.py  test_command_payloads.py  test_embeds.py  test_library_commands.py  test_logging_setup.py  test_models.py  test_overseerr_client.py  test_package_import.py  test_plex_client.py  test_util.py
