[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-plex"
version = "1.1.1"
description = "Discord bot to enable Plex and Overseerr API interactions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "John Magnus-Sharpe" },
]
dependencies = [
  "aiohttp~=3.13",
  "audioop-lts~=0.2; python_version >= '3.13'",
  "plexapi~=4.18.1",
  "py-cord~=2.7",
  "python-dotenv~=1.2",
  "rapidfuzz~=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest~=9.0",
  "pytest-asyncio~=1.3",
  "ruff~=0.15",
  "pyright~=1.1",
]

[project.urls]
Repository = "https://github.com/jdmsharpe/discord-plex"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",  # line too long (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
extraPaths = ["src"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["discord_plex*"]
